--- a/aria-practices.html
+++ b/aria-practices.html
@@ -476,7 +476,7 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
                   a toggle button, specify a value for the attribute <a
                   href="#aria-pressed" class="state-reference"
                 >aria-pressed</a>. For example, a button labeled mute in an audio player
-                  could indicate that sound is muted by setting the pressed state true. <STRONG>Important:<strong>
+                  could indicate that sound is muted by setting the pressed state true. <STRONG>Important:</strong>
                       the label on a toggle button should never change when the state
                       changes. In this example, when the pressed state is true, the label
                       should not change to &quot;Unmute"&quot; or &quot;Muted.&quot; 
