--- a/aria-practices.html
+++ b/aria-practices.html
@@ -469,7 +469,9 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
           <tr>
             <td class="widget-description-head" scope="row">Description: </td>
             <td class="widget-description">
-              <p>A <a class="role-reference" href="#button">button</a> is a widget that enables users to trigger an action or event, such as submitting a form, opening a dialog, cancelling an action, or performing a delete operation. WAI-ARIA supports 3 types of buttons:</p>
+              <p>A <a class="role-reference" href="#button">button</a> is a widget that enables users to trigger an action or event, such as submitting a form, opening a dialog, cancelling an action, or performing a delete operation.</p>
+			  <p>A common convention for informing users that a button launches a dialog is to append &quot;&hellip;&quot; (ellipsis) to the button label, e.g., .&quot;Save as &hellip;&quot;.</p>
+			  <p>In addition to the ordinary button widget, WAI-ARIA supports 2 other types of buttons:</p>
               <ul>
                 <li>Toggle button: A two-state button that can be either off (not
                   pressed) or on (pressed). To tell assistive technologies that a button is
@@ -485,11 +487,8 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
                     button pattern</a>, a button will be revealed to assistive technologies as
                   a menu button if it has the property <a href="#aria-haspopup" class="property-reference">aria-haspopup</a> set true.
                 </li>
-                <li>Button: Buttons that are not toggle buttons or menu buttons are
-                  standard command buttons. They are seen by assistive technologies simply
-                  as a button.</li>
               </ul>
-              <p>A common convention for informing users that a button launches a dialog is to append &quot;&hellip;&quot; (ellipsis) to the button label, e.g., .&quot;Save as &hellip;&quot;.</p>
+              
               <p class="note">The types of actions performed by buttons are distinctly
                 different from the function of a link (see <a href="#link">link pattern</a>). It is important that the
                 role of a widget matches the function it provides. Ideally, the
