Editorial Changes on Checkbox pattern

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -552,7 +552,7 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
     </section>
 		<hr />
 		<section class="widget" id="checkbox">
-      <h3 class="widget-name">Check Box</h3>
+      <h3 class="widget-name">Checkbox</h3>
     <table cellspacing="0" class="widget-features">
       <caption>
       Characteristics:
@@ -573,7 +573,7 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
               </ol>
               <p>One common use of a tri-state checkbox can be found in software installers 
               where a single tri-state checkbox is used to represent and control the state of an entire group of install options. 
-              And, each option in the group can be individually turned on or off with a dual sate checkbox.</p>
+              And, each option in the group can be individually turned on or off with a dual state checkbox.</p>
               <ul>
                 <li>If all options in the group are checked, the overall state is                  represented by the tri-state checkbox displaying as checked .</li>
                 <li>If some of the options in the group are checked, the overall state is represented with the tri-state checkbox displaying as partially checked.</li>
@@ -596,7 +596,7 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
         <tr>
           <td class="widget-keyboard-head" scope="row">Keyboard Interaction: </td>
           <td class="widget-keyboard">
-              <p>When the checkbox has focus, pressing the <kbd>Space</kbd> key changes the state of the chekbox. </p>
+              <p>When the checkbox has focus, pressing the <kbd>Space</kbd> key changes the state of the checkbox. </p>
           </td>
         </tr>
         <tr>
