modified:   practices/aria-practices.html Added editor's note to listbox pattern to state it is not fully reviewed by the TF.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1222,6 +1222,7 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
     <hr/>
     <section class="widget" id="Listbox">
     <h3 class="widget-name">Listbox</h3>
+    <p><strong>Editor's note:</strong> This section has been partially revised and reviewed since it was integrated from APG version 1.0 -- a complete APG taskforce review is pending.</p>
       <table cellspacing="0" class="widget-features">
         <caption>
         Characteristics:
