Adjust config and remove status from master (ed draft)

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -22,7 +22,7 @@
           diffTool:             "http://www.aptest.com/standards/htmldiff/htmldiff.pl",
           
           // the specifications short name, as in http://www.w3.org/TR/short-name/
-          shortName:            "wai-aria-practices",
+          shortName:            "wai-aria-practices-1.1",
           
 
           // if you wish the publication date to be other than today, set this
@@ -86,6 +86,7 @@
    // Spec URLs
     ariaSpecURLs: {
       "ED": "http://w3c.github.io/aria/aria/aria.html",
+      "FPWD" : "http://www.w3.org/TR/wai-aria-1.1/",
       "WD" : "http://www.w3.org/TR/wai-aria-1.1/",
       "REC": "http://www.w3.org/TR/wai-aria/"
     },
@@ -133,13 +134,7 @@
 <section id="abstract">
 	<p>This document provides readers with an understanding of how to use [[WAI-ARIA]] to create accessible rich internet applications. It describes considerations that might not be evident to most authors from the WAI-ARIA specification alone and recommends approaches to make widgets, navigation, and behaviors accessible using WAI-ARIA roles, states, and properties. This document is directed primarily to Web application developers, but the guidance is also useful for user agent and assistive technology developers. This document is part of the WAI-ARIA suite described in the <a href="http://www.w3.org/WAI/intro/aria.php">WAI-ARIA Overview</a>.</p>
 </section>
-<section id="sotd">
-		<p>This is a Public Working Draft by the <a href="http://www.w3.org/WAI/PF/">Protocols &amp; Formats Working Group</a> of the <a href="http://www.w3.org/WAI/">Web Accessibility Initiative</a>. It supports the [[WAI-ARIA]] specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification. This version incorporates changes made in response to public comments received on the previous version and issues identified by the Working Group in the course of its general work on WAI-ARIA. This snapshot is being published to bring the public Working Draft up to date with important improvements since the prior publication, but it does not address all issues known to date. A <a
-			href="http://www.w3.org/WAI/PF/aria-practices/change-history">history of changes to WAI-ARIA 1.0 Authoring Practices</a> is available. Refer to the <a href="http://www.w3.org/WAI/PF/comments/actions?document_version_id=10">summary of actions made in response to comments on the previous draft</a> and the <a href="http://www.w3.org/WAI/PF/comments/issue_disposition_report?document_version_id=10">issue disposition report for the previous draft</a>. </p>
-		<p>Feedback on the  information provided here is essential to the ultimate success of Rich Internet Applications that afford full access to their information and operations. The PFWG asks in particular:</p>
-		<ul><li>Is it clear how to create accessible Rich Internet Applications?</li><li>Is the usage of roles, states, and properties clear? </li><li>Are the various types of rich Web content covered? </li><li>Are considerations beyond the use of WAI-ARIA sufficiently explained? </li><li>Is the relationship of this document to the WAI-ARIA specification clear? </li><li>Are the <a href="http://www.w3.org/TR/wai-aria-practices/#aria_ex">design patterns</a> clear?</li></ul>
-		<p>Start with the <a href="http://www.w3.org/WAI/PF/comments/instructions">instructions for commenting</a> page to submit comments (preferred), or send email to <a href="mailto:public-pfwg-comments@w3.org">public-pfwg-comments@w3.org</a> (<a href="http://lists.w3.org/Archives/Public/public-pfwg-comments/">comment archive</a>). Comments should be made by <strong>5 April 2013</strong>. In-progress updates to the document may be viewed in the <a href="http://www.w3.org/WAI/PF/aria-practices/">publicly visible editors' draft</a>.</p>
-</section>
+<section id="sotd"></section>
 <section id="intro">
   <h2> Introduction</h2>
   <p>This section is <em>informative.</em></p>
