--- a/aria-practices.html
+++ b/aria-practices.html
@@ -27,7 +27,7 @@
 
           // if you wish the publication date to be other than today, set this
           // publishDate:  "2009-08-06",
-          copyrightStart:  "2014",
+          copyrightStart:  "2015",
 
           // if there is a previously published draft, uncomment this and set its YYYY-MM-DD date
           // and its maturity status
@@ -38,7 +38,7 @@
 
 
           // if there a publicly available Editors Draft, this is the link
-          edDraftURI: "http://github.com/w3c/aria/practices/aria-practices.html",
+          edDraftURI: "http://w3c.github.io/aria/practices/aria-practices.html",
 
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2012-02-21",
@@ -132,7 +132,8 @@
 </head>
 <body>
 <section id="abstract">
-	<p>This document provides readers with an understanding of how to use [[WAI-ARIA]] to create accessible rich internet applications. It describes considerations that might not be evident to most authors from the WAI-ARIA specification alone and recommends approaches to make widgets, navigation, and behaviors accessible using WAI-ARIA roles, states, and properties. This document is directed primarily to Web application developers, but the guidance is also useful for user agent and assistive technology developers. This document is part of the WAI-ARIA suite described in the <a href="http://www.w3.org/WAI/intro/aria.php">WAI-ARIA Overview</a>.</p>
+	<p>This document provides readers with an understanding of how to use <cite><a href="http://www.w3.org/TR/wai-aria-1.1/"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.1</a></cite> [[WAI-ARIA]] to create accessible rich internet applications. It describes considerations that might not be evident to most authors from the WAI-ARIA specification alone and recommends approaches to make widgets, navigation, and behaviors accessible using WAI-ARIA roles, states, and properties. This document is directed primarily to Web application developers, but the guidance is also useful for user agent and assistive technology developers. </p>
+	<p>This document is part of the WAI-ARIA suite described in the <a href="http://www.w3.org/WAI/intro/aria.php">WAI-ARIA Overview</a>.</p>
 </section>
 <section id="sotd"></section>
 <section id="intro">
