Friggin comma vs semicolon

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -19,7 +19,7 @@
           //crEnd:                "2012-04-30",
           //perEnd:               "2013-07-23",
           //publishDate:          "2013-08-22",
-          noRecTrack: true;
+          noRecTrack: true,
           diffTool:             "http://www.aptest.com/standards/htmldiff/htmldiff.pl",
           
           // the specifications short name, as in http://www.w3.org/TR/short-name/
