--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4654,7 +4654,7 @@ navigation  recommended  here, it should be documented on the page.</p>
       <section id="role">
 			<h4> Provision of the Role Attribute: "What is the Object?"</h4>
 			<p>Each platform accessibility API has the notion of a "role" for a
-				GUI object. This is the case for [[JAPI]], [[MSAA]]], [[AXAPI]], and the [[ATK]], or [[UIAUTOMATION]] (called content type in UI Automation). The WAI-ARIA specifications are based on XHTML 1.X and include the role attribute. The "role" attribute takes a qname, enabling authors to reference the role attribute from the WAI-ARIA Roles. In
+				GUI object. This is the case for [[JAPI]], [[MSAA]]], [[AXAPI]], and the [[ATK]], or [[UI-AUTOMATION]] (called content type in UI Automation). The WAI-ARIA specifications are based on XHTML 1.X and include the role attribute. The "role" attribute takes a qname, enabling authors to reference the role attribute from the WAI-ARIA Roles. In
 				the following example, we use qname to reference the menu role  in the WAI-ARIA specification. </p>
 			<div class="example">
 				<p>Example: Use of WAI-ARIA to  incorporate
