Role attribute reference

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4828,7 +4828,7 @@ navigation  recommended  here, it should be documented on the page.</p>
 	</section>
     <section id="landmark-navigation">
 		<h3> Use of XHTML Role Landmarks to Improve Document Navigation</h3>
-		<p>In addition to the common roles which will reside in WAI-ARIA Roles, both XHTML 2.0, and the <a href="../role-attribute/#s_role_module_attributes">XHTML Role attribute module</a> ([<a href="#ref_ROLE">ROLE</a>], Section 4) defines a collection of common role, regional, landmarks that define pertinent parts of a
+		<p>In addition to the common roles which will reside in WAI-ARIA Roles, both XHTML 2.0, and the <a href="http://www.w3.org/TR/role-attribute/#s_role_module_attributes">XHTML Role attribute module</a> ([[ROLE-ATTRIBUTE]], Section 4) defines a collection of common role, regional, landmarks that define pertinent parts of a
 			document for the purpose of accessibility. User agents may
 			incorporate device equivalents, such as key mappings in the case of
 			a desktop user agent, to navigate to these sections of a document
