And something was weird with the previous commit

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2932,6 +2932,7 @@ Here the values 1 through 7 represent the days of the week and
       <h4> Using Tabindex to Manage Focus among Widgets</h4>
       <p>One requirement for supporting the keyboard is to allow focus to be set to any element. The <a href="http://www.w3.org/TR/html401/interact/forms.html#adef-tabindex" title="HTML4 tabindex attribute ">tabindex</a> attribute can be used to include additional elements in the tab order and to set programmatic focus to them. Originally implemented in Internet Explorer 5, the feature has been extended to Opera, Gecko-based user agents such as Firefox, and WebKit-based user agents such as Safari. The following table outlines the use of the tabindex attribute: </p>
       <div>
+        <table summary="three-column table with one heading row where column one lists the Tabindex attribute, column two indicates how the element takes focus, and column three describes the tab navigation">
           <caption>
           Use of the Tabindex Attribute
           </caption>
