Practices remove table summary

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2872,7 +2872,7 @@ function detectHiContrast() {
       <section id="kbd_general_ex">
       <h4> Example Keyboard Operation: Radio Group/Radio </h4>
       <p> See working <a href="http://test.cita.uiuc.edu/aria/radio/" title="CITA Radio Button Examples">Radio button examples</a> from the University of Illinois.</p>
-      <table summary="two-column table with one heading row where column one lists a key and column two describes the response to that key press in a radio button group">
+      <table>
         <caption>
         Key Bindings for Radio Group Behavior - Example
         </caption>
@@ -2932,7 +2932,7 @@ Here the values 1 through 7 represent the days of the week and
       <h4> Using Tabindex to Manage Focus among Widgets</h4>
       <p>One requirement for supporting the keyboard is to allow focus to be set to any element. The <a href="http://www.w3.org/TR/html401/interact/forms.html#adef-tabindex" title="HTML4 tabindex attribute ">tabindex</a> attribute can be used to include additional elements in the tab order and to set programmatic focus to them. Originally implemented in Internet Explorer 5, the feature has been extended to Opera, Gecko-based user agents such as Firefox, and WebKit-based user agents such as Safari. The following table outlines the use of the tabindex attribute: </p>
       <div>
-        <table summary="three-column table with one heading row where column one lists the Tabindex attribute, column two indicates how the element takes focus, and column three describes the tab navigation">
+        <table>
           <caption>
           Use of the Tabindex Attribute
           </caption>
